--- a/ChatQnA/docker_compose/intel/hpu/gaudi/compose_guardrails.yaml
+++ b/ChatQnA/docker_compose/intel/hpu/gaudi/compose_guardrails.yaml
@@ -31,50 +31,63 @@ services:
       timeout: 5s
       retries: 50
     restart: unless-stopped
-  vllm-guardrails-service:
-    image: ${REGISTRY:-opea}/vllm-gaudi:${TAG:-latest}
-    container_name: vllm-guardrails-server
-    ports:
-      - "8088:80"
-    volumes:
-      - "${MODEL_CACHE:-./data}:/data"
-    environment:
-      no_proxy: ${no_proxy}
-      http_proxy: ${http_proxy}
-      https_proxy: ${https_proxy}
-      HF_TOKEN: ${HUGGINGFACEHUB_API_TOKEN}
-      HABANA_VISIBLE_DEVICES: all
-      OMPI_MCA_btl_vader_single_copy_mechanism: none
-      GURADRAILS_MODEL_ID: ${GURADRAILS_MODEL_ID}
-      NUM_CARDS: ${NUM_CARDS}
-      VLLM_TORCH_PROFILER_DIR: "/mnt"
-    runtime: habana
-    cap_add:
-      - SYS_NICE
-    ipc: host
-    command: --model ${GURADRAILS_MODEL_ID} --tensor-parallel-size ${NUM_CARDS} --host 0.0.0.0 --port 80 --block-size 128 --max-num-seqs 256 --max-seq-len-to-capture 2048
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://$host_ip:8088/health || exit 1"]
-      interval: 10s
-      timeout: 10s
-      retries: 150
+
   guardrails:
-    image: ${REGISTRY:-opea}/guardrails:${TAG:-latest}
-    container_name: guardrails-gaudi-server
+    image: ${REGISTRY:-opea}/guardrails-toxicity-detection:${TAG:-latest}
+    container_name: guardrails-toxicity-detection-server
     ports:
-      - "9090:9090"
+      - "${TOXICITY_DETECTION_PORT:-9090}:9090"
     ipc: host
-    depends_on:
-      vllm-guardrails-service:
-        condition: service_healthy
     environment:
       no_proxy: ${no_proxy}
       http_proxy: ${http_proxy}
       https_proxy: ${https_proxy}
-      SAFETY_GUARD_MODEL_ID: ${GURADRAILS_MODEL_ID}
-      SAFETY_GUARD_ENDPOINT: http://vllm-guardrails-service:80
-      HUGGINGFACEHUB_API_TOKEN: ${HUGGINGFACEHUB_API_TOKEN}
     restart: unless-stopped
+
+#  vllm-guardrails-service:
+#    image: ${REGISTRY:-opea}/vllm-gaudi:${TAG:-latest}
+#    container_name: vllm-guardrails-server
+#    ports:
+#      - "8088:80"
+#    volumes:
+#      - "${MODEL_CACHE:-./data}:/data"
+#    environment:
+#      no_proxy: ${no_proxy}
+#      http_proxy: ${http_proxy}
+#      https_proxy: ${https_proxy}
+#      HF_TOKEN: ${HUGGINGFACEHUB_API_TOKEN}
+#      HABANA_VISIBLE_DEVICES: all
+#      OMPI_MCA_btl_vader_single_copy_mechanism: none
+#      GURADRAILS_MODEL_ID: ${GURADRAILS_MODEL_ID}
+#      NUM_CARDS: ${NUM_CARDS}
+#      VLLM_TORCH_PROFILER_DIR: "/mnt"
+#    runtime: habana
+#    cap_add:
+#      - SYS_NICE
+#    ipc: host
+#    command: --model ${GURADRAILS_MODEL_ID} --tensor-parallel-size ${NUM_CARDS} --host 0.0.0.0 --port 80 --block-size 128 --max-num-seqs 256 --max-seq-len-to-capture 2048
+#    healthcheck:
+#      test: ["CMD-SHELL", "curl -f http://$host_ip:8088/health || exit 1"]
+#      interval: 10s
+#      timeout: 10s
+#      retries: 150
+#  guardrails:
+#    image: ${REGISTRY:-opea}/guardrails:${TAG:-latest}
+#    container_name: guardrails-gaudi-server
+#    ports:
+#      - "9090:9090"
+#    ipc: host
+#    depends_on:
+#      vllm-guardrails-service:
+#        condition: service_healthy
+#    environment:
+#      no_proxy: ${no_proxy}
+#      http_proxy: ${http_proxy}
+#      https_proxy: ${https_proxy}
+#      SAFETY_GUARD_MODEL_ID: ${GURADRAILS_MODEL_ID}
+#      SAFETY_GUARD_ENDPOINT: http://vllm-guardrails-service:80
+#      HUGGINGFACEHUB_API_TOKEN: ${HUGGINGFACEHUB_API_TOKEN}
+#    restart: unless-stopped
   tei-embedding-service:
     image: ghcr.io/huggingface/text-embeddings-inference:cpu-1.6
     container_name: tei-embedding-gaudi-server
@@ -146,6 +159,7 @@ services:
       LLM_MODEL_ID: ${LLM_MODEL_ID}
       NUM_CARDS: ${NUM_CARDS}
       VLLM_TORCH_PROFILER_DIR: "/mnt"
+      VLLM_SKIP_WARMUP: "true"
     runtime: habana
     cap_add:
       - SYS_NICE
@@ -162,8 +176,8 @@ services:
     depends_on:
       redis-vector-db:
         condition: service_started
-      vllm-guardrails-service:
-        condition: service_started
+      #vllm-guardrails-service:
+      #  condition: service_started
       guardrails:
         condition: service_started
       tei-embedding-service:
